tests/03-typecheck/10-data-field.stack
data point
    (int x, int y)

func invalid_field_access (point) (int) in
    point.z
end
